using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public abstract class BaseForm : MonoBehaviour
{
    public abstract WWWForm SetForm();
}
